--- a/TidyManagedTests/TidyManagedTests.csproj
+++ b/TidyManagedTests/TidyManagedTests.csproj
@@ -12,7 +12,6 @@
     <AssemblyName>TidyManagedTests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,15 +54,22 @@
       <Name>TidyManaged</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\app.config">
+      <Link>TidyManaged.dll.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>copy $(SolutionDir)lib\libtidy.dll $(TargetDir)</PreBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="AfterBuild">
+		<Copy SourceFiles="$(SolutionDir)/libs/libtidy.dll" DestinationFolder="$(TargetDir)" Condition="'$(OS)'=='Windows_NT'"/>
+		<Copy SourceFiles="$(SolutionDir)/libs/libtidy-html5.so" DestinationFolder="$(TargetDir)" Condition="'$(OS)'!='Windows_NT'"/>
+  </Target>
 </Project>
