--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tidy-html5"]
 	path = tidy-html5
-	url = https://github.com/w3c/tidy-html5.git
+	url = https://github.com/ermshiperete/tidy-html5.git
