--- a/TidyManaged.csproj
+++ b/TidyManaged.csproj
@@ -127,7 +127,7 @@
   -->
   <Target Name="AfterBuild">
     <Copy SourceFiles="libs/libtidy.dll" DestinationFolder="$(OutputPath)" Condition="'$(OS)'=='Windows_NT'" />
-    <Copy SourceFiles="libs/libtidy-html5.so" DestinationFolder="$(OutputPath)" Condition="'$(OS)'!='Windows_NT'" />
+    <Copy SourceFiles="libs/libtidy5.so" DestinationFolder="$(OutputPath)" Condition="'$(OS)'!='Windows_NT'" />
   </Target>
   <ItemGroup>
     <None Include="app.config" />
